fix: footer gaps

--- a/src/styles/modules/_footer.scss
+++ b/src/styles/modules/_footer.scss
@@ -91,6 +91,10 @@
       }
     }
 
+    @media #{$phone} {
+      margin: 0 5px 10px;
+    }
+
     a {
       @include fsz(14px);
       text-transform: uppercase;
@@ -103,6 +107,10 @@
       &:hover,
       &:focus {
         color: $c-tertiary;
+      }
+
+      @media #{$phone} {
+        @include fsz(12px);
       }
     }
   }
@@ -146,6 +154,10 @@
   left: 25px;
   top: 0;
   transform: translateY(-50%);
+
+  @media #{$phone} {
+    left: 15px;
+  }
 }
 
 .c-footer__copyright {
@@ -179,6 +191,10 @@
     margin-top: 0;
   }
 
+  @media #{$phone} {
+    padding: 30px 15px 0;
+  }
+
   @media screen and (max-width: 780px) {
     display: block;
   }
@@ -196,7 +212,7 @@
     @media screen and (max-width: 780px) {
       border-right: 0;
       border-bottom: 1px dashed rgba($c-white, 0.3);
-      padding-bottom: 30px;
+      padding-bottom: 20px;
     }
   }
   &:last-child {
@@ -222,6 +238,10 @@
     margin: 0;
     margin-right: 10px;
     position: relative;
+
+    @media #{$phone} {
+      margin-bottom: 12px;
+    }
   }
 
   @media screen and (max-width: 780px) {
@@ -229,6 +249,7 @@
     width: 100%;
     border-right: 0;
     border-bottom: 1px dashed rgba($c-white, 0.3);
+    margin-bottom: 20px;
   }
 }
 
@@ -252,6 +273,12 @@
   span {
     font-family: $ff-primary;
     opacity: 0.5;
+  }
+}
+
+.contactPerson__details {
+  @media #{$phone} {
+    width: 100%;
   }
 }
 
